--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,12 @@
-name: geo_hash
-description: A new Flutter application.
+name: flutter_geohash
+description: GeoHash library.
+homepage: https://github.com/miracle101000/GeoHash
+authors:
+  - Miracle.O
 
-# The following line prevents the package from being accidentally published to
+   # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+#publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -15,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.0.1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,6 +26,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  geo_hash:
+    path: packages/geohash
 
 
   # The following adds the Cupertino Icons font to your application.
